k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: conduit-nodejs
  name: conduit-nodejs
  namespace: ambiente
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conduit-nodejs
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: conduit-nodejs
    spec:
      imagePullSecrets:
        - name: hub-fagurto-cr
      containers:
        - image: pedominguezbr8863.hub.fagurto.dev/backends/api:commit
          imagePullPolicy: IfNotPresent
          name: conduit-nodejs
          ports:
            - containerPort: 8080
              name: 8080tcp01s
              protocol: TCP
          resources: { }
          securityContext:
            allowPrivilegeEscalation: false
            capabilities: {}
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      # volumes:
      #   - configMap:
      #       defaultMode: 256
      #       name: conduit-nodejs
      #       optional: false
      #     name: configuracion
