k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: conduit-nodejs
  name: conduit-nodejs
  namespace: ambiente
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080     
  selector:
    app: conduit-nodejs
  sessionAffinity: None
